--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "surveyui",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.1.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
